--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,17 @@
         </li>
     </ul>
 
-    <form #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+    <div *ngIf="isLoggedIn()" class="dropdown">
+        <a class="dropdown-toggle text-light">Dropdown</a>
+
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
+            <a class="dropdown-divider"></a>
+            <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+        </div>
+    </div>
+
+    <form *ngIf="!isLoggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
         <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username" required
                [(ngModel)]="model.username">
         <input class="form-control mr-sm-2" type="password" placeholder="Password" name="password" required
