--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -14,7 +14,7 @@
     </ul>
 
     <div *ngIf="isLoggedIn()" class="dropdown">
-        <a class="dropdown-toggle text-light">Dropdown</a>
+        <a class="dropdown-toggle text-light">Welcome {{this.authServiceInterface.getUserNameFromToken() | titlecase}}</a>
 
         <div class="dropdown-menu">
             <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
