--- a/src/app/members/components/member.card/member.card.component.html
+++ b/src/app/members/components/member.card/member.card.component.html
@@ -1,13 +1,17 @@
 <div class="card mb-4">
     <div class="card-img-wrapper">
-        <img src="{{user.mainPhotoUrl}}" alt="{{user.knownAs}}" class="card-img-top">
+        <img
+            src="{{ user.mainPhotoUrl }}"
+            alt="{{ user.knownAs }}"
+            class="card-img-top"
+        />
         <div class="card-body p-1">
             <h6 class="card-title text-center mb-1">
-                <i class="fa fa-user mr-2"></i>
-                {{user.knownAs}}
+            <i class="fa fa-user mr-2"></i>
+                {{ user.knownAs }}
             </h6>
             <p class="card-text text-muted text-center">
-                {{user.city}}
+                {{ user.city }}
             </p>
         </div>
     </div>
