--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-danger">
+<nav class="navbar navbar-expand-md navbar-dark bg-danger mb-4">
     <div class="container">
         <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
 
