--- a/src/app/members/components/member-edit/member-edit.component.html
+++ b/src/app/members/components/member-edit/member-edit.component.html
@@ -1,1 +1,61 @@
-<p>member-edit works!</p>
+<div class="row" *ngIf="user">
+    <div class="col-4">
+        <h1>Your profile</h1>
+    </div>
+    <div class="col-8">
+        <div *ngIf="editForm.dirty" class="alert alert-info">
+            <strong>You have made changes!</strong>
+        </div>
+    </div>
+    <div class="col-4">
+        <div class="card">
+            <img class="card-img-top img-thumbnail" src="{{user.mainPhotoUrl || './assets/user.png'}}"
+                 alt="{{user.knownAs}}">
+            <div class="card-body">
+                <div>
+                    <strong>Location:</strong>
+                    <p>{{user.city}}, {{user.country}}</p>
+                </div>
+                <div>
+                    <strong>Age:</strong>
+                    <p>{{user.age}}</p>
+                </div>
+                <div>
+                    <strong>Last Active:</strong>
+                    <p>{{user.lastActive}}</p>
+                </div>
+                <div>
+                    <strong>Member Since:</strong>
+                    <p>{{user.createdAt}}</p>
+                </div>
+            </div>
+            <div class="card-footer">
+                <button form="editForm" type="submit" class="btn btn-success btn-block" [disabled]="!editForm.dirty">Save Changes</button>
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <tabset class="member-tabset">
+            <tab heading="About {{user.knownAs}}">
+                <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
+                    <h4>Introduction</h4>
+                    <textarea class="form-control" [(ngModel)]="user.introduction" name="introduction" rows="6"></textarea>
+                    <h4 class="mt-2">Looking for</h4>
+                    <textarea class="form-control" [(ngModel)]="user.lookingFor" name="lookingFor" rows="6"></textarea>
+                    <h4 class="mt-2">Interests</h4>
+                    <textarea class="form-control" [(ngModel)]="user.interests" name="interests" rows="6"></textarea>
+                    <h4 class="mt-2">Location Details</h4>
+                    <div class="form-inline">
+                        <label for="city">City: </label>
+                        <input [(ngModel)]="user.city" type="text" name="city" class="form-control mx-2">
+                        <label for="country">Country: </label>
+                        <input [(ngModel)]="user.country" type="text" name="country" class="form-control mx-2">
+                    </div>
+                </form>
+            </tab>
+            <tab heading="Photos">
+                <app-photo-editor [member]="user"></app-photo-editor>
+            </tab>
+        </tabset>
+    </div>
+</div>
