--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-danger mb-4">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
         <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
 
@@ -19,7 +19,7 @@
                class="btn dropdown-toggle text-light">Welcome {{this.authServiceInterface.getUserNameFromToken() | titlecase}}</a>
 
             <div *dropdownMenu class="dropdown-menu mt-1">
-                <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
+                <a class="dropdown-item" [routerLink]="['/member/edit']"><i class="fa fa-user"></i>Edit Profile</a>
                 <a class="dropdown-divider"></a>
                 <a class="dropdown-item" href="#" (click)="logOut()"><i class="fa fa-sign-out"></i>Logout</a>
             </div>
