--- a/src/app/members/components/member-card/member-card.component.html
+++ b/src/app/members/components/member-card/member-card.component.html
@@ -20,7 +20,7 @@
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
             <i class="fa fa-user mr-2"></i>
-            {{ user.knownAs || 'n/a' }}
+            {{ user.knownAs || user.username || 'n/a' }}
         </h6>
         <p class="card-text text-muted text-center">
             {{ user.city || 'n/a' }}
