--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,6 +15,7 @@
         </ul>
 
         <div dropdown *ngIf="isLoggedIn()" class="dropdown">
+            <img src="{{this.authServiceInterface.getMainPhoto()}}">
             <a dropdownToggle
                class="btn dropdown-toggle text-light">Welcome {{this.authServiceInterface.getUserNameFromToken() | titlecase}}</a>
 
