--- a/src/app/members/components/photo-editor/photo-editor.component.html
+++ b/src/app/members/components/photo-editor/photo-editor.component.html
@@ -9,7 +9,12 @@
             >
                 Main
             </button>
-            <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+            <button
+                class="btn btn-sm btn-danger"
+                (click)="removePhoto(photo)"
+            >
+                <i class="fa fa-trash"></i>
+            </button>
         </div>
     </div>
 </div>
