--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,5 +1,46 @@
+<div class="text-center mt-3">
+    <h2>Your matches - {{pagination?.total}} found</h2>
+</div>
+
+<div class="container mt-3">
+    <form action="" class="form-inline mb-3" (ngSubmit)="fetchMembers()" autocomplete="off">
+        <div class="form-group">
+            <label>Age from: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" [(ngModel)]="minAge">
+        </div>
+        <div class="form-group">
+            <label>Age to: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" [(ngModel)]="maxAge">
+        </div>
+        <div class="form-group px-2">
+            <label>Gender: </label>
+            <select name="gender" style="width: 130px;" class="form-control ml-1" [(ngModel)]="gender">
+                <option *ngFor="let gender of genderList" [value]="gender.value">
+                    {{gender.display}}
+                </option>
+            </select>
+        </div>
+        <button class="btn btn-primary ml-1" type="submit">Apply</button>
+        <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filters</button>
+    </form>
+</div>
+
 <div class="row">
     <div *ngFor="let user of users" class="col-2">
         <app-member-card [user]="user"></app-member-card>
     </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination
+        [boundaryLinks]="true"
+        [totalItems]="pagination.total"
+        [itemsPerPage]="pagination.limit"
+        [(ngModel)]="pagination.page"
+        (pageChanged)="switchPage($event)"
+        previousText="&lsaquo;"
+        nextText="&rsaquo;"
+        firstText="&laquo;"
+        lastText="&raquo;"
+    ></pagination>
 </div>
