--- a/src/app/members/components/member-detail/member-detail.component.html
+++ b/src/app/members/components/member-detail/member-detail.component.html
@@ -13,11 +13,11 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive | date: 'dd MMM yyyy'}}</p>
                 </div>
                 <div>
                     <strong>Member Since:</strong>
-                    <p>{{member.createdAt}}</p>
+                    <p>{{member.createdAt | date: 'dd MMM yyyy'}}</p>
                 </div>
             </div>
             <div class="card-footer">
