--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -22,6 +22,25 @@
         </div>
         <button class="btn btn-primary ml-1" type="submit">Apply</button>
         <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filters</button>
+        <div class="col"></div>
+        <div class="btn-group float-right">
+            <button
+                class="btn btn-primary"
+                type="button"
+                name="orderBy"
+                (click)="fetchMembers()"
+                btnRadio="lastActive"
+                [(ngModel)]="orderBy"
+            >Last Active</button>
+            <button
+                class="btn btn-primary"
+                type="button"
+                name="orderBy"
+                (click)="fetchMembers()"
+                btnRadio="createdAt"
+                [(ngModel)]="orderBy"
+            >Newest Members</button>
+        </div>
     </form>
 </div>
 
