--- a/src/app/members/components/member-detail/member-detail.component.html
+++ b/src/app/members/components/member-detail/member-detail.component.html
@@ -45,8 +45,7 @@
                              style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading="Messages">
-                <h4>Messages</h4>
-                <p>Coming soon!</p>
+                <app-member-messages [userId]="member.id"></app-member-messages>
             </tab>
         </tabset>
     </div>
