message pages, message deletion

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -6,7 +6,7 @@
         <button class="btn btn-primary" btnRadio="Inbox" [(ngModel)]="container" (click)="loadMessages()">
             <i class="fa fa-envelope-open"></i> Inbox
         </button>
-        <button class="btn btn-primary" btnRadio="Outbox" [(ngModel)]="container" (click)="loadMessages()">
+        <button class="btn btn-primary" btnRadio="Sent" [(ngModel)]="container" (click)="loadMessages()">
             <i class="fa fa-envelope-plane"></i> Outbox
         </button>
     </div>
@@ -18,12 +18,9 @@
             <th style="width: 40%">Message</th>
             <th style="width: 20%">From / To</th>
             <th style="width: 20%">Sent / Received</th>
-            <th style="width: 20%">Sent / Received</th>
+            <th style="width: 20%"></th>
         </tr>
-        <tr *ngFor="let message of messages"
-            routerLink='{{container === "Outbox"
-            ? "/members/" + message.targetUsername
-            : "/members/" + message.sourceUsername}}'>
+        <tr *ngFor="let message of messages">
             <td>{{message.content}}</td>
             <td>
                 <div *ngIf="container === 'Outbox'">
@@ -39,7 +36,7 @@
             </td>
             <td>{{message.createdAt}}</td>
             <td>
-                <button class="btn btn-danger">Delete</button>
+                <button (click)="deleteMessage(message.id)" class="btn btn-danger">Delete</button>
             </td>
         </tr>
     </table>
