--- a/src/app/members/components/member-detail/member-detail.component.html
+++ b/src/app/members/components/member-detail/member-detail.component.html
@@ -45,7 +45,7 @@
                              style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading="Messages">
-                <app-member-messages [userId]="member.id"></app-member-messages>
+                <app-member-messages [userId]="member.id" [username]="member.username"></app-member-messages>
             </tab>
         </tabset>
     </div>
