--- a/src/app/members/components/member-card/member-card.component.css
+++ b/src/app/members/components/member-card/member-card.component.css
@@ -32,5 +32,19 @@
 }
 
 .animate {
-    transition: all 0.3sec ease-in-out;
+    transition: all 0.3 sec ease-in-out;
+}
+
+@keyframes fa-blink {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.4
+    }
+}
+
+.is-online {
+    animation: fa-blink 1.5s linear infinite;
+    color: rgb(1, 189, 42);
 }
