--- a/src/app/members/components/member-card/member-card.component.html
+++ b/src/app/members/components/member-card/member-card.component.html
@@ -19,7 +19,9 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
-            <i class="fa fa-user mr-2"></i>
+            <span [class.is-online]="(presenceService.onlineUsers$ | async).includes(user.id)">
+                <i class="fa fa-user mr-2"></i>
+            </span>
             {{ user.knownAs || user.username || 'n/a' }}, {{user.age}}
         </h6>
         <p class="card-text text-muted text-center">
