--- a/src/app/members/components/member-detail/member-detail.component.html
+++ b/src/app/members/components/member-detail/member-detail.component.html
@@ -1,8 +1,12 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
-            <img class="card-img-top img-thumbnail" src="{{member.mainPhotoUrl || './assets/user.png'}}" alt="{{member.knownAs}}">
+            <img class="card-img-top img-thumbnail" src="{{member.mainPhotoUrl || './assets/user.png'}}"
+                 alt="{{member.knownAs}}">
             <div class="card-body">
+                <div class="mb-2" *ngIf="(presenceService.onlineUsers$ | async).includes(member.id)">
+                    <i class="fa fa-user-circle text-success"></i> Online now
+                </div>
                 <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
