--- a/src/app/members/components/member-messages/member-messages.component.html
+++ b/src/app/members/components/member-messages/member-messages.component.html
@@ -1,11 +1,11 @@
 <div class="card">
     <div class="card-body">
-        <div *ngIf="!messages?.length">
+        <div *ngIf="!(this.messageService.messageThread$ | async)?.length">
             No messages yet...
         </div>
 
-        <ul *ngIf="messages?.length" class="chat">
-            <li *ngFor="let message of messages">
+        <ul *ngIf="(this.messageService.messageThread$ | async)?.length" class="chat">
+            <li *ngFor="let message of (this.messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img float-right">
                         <img src="{{message.sourcePhotoUrl || './assets/user.png'}}" alt="{{message.sourceUsername}}"
